--- a/MLAK-Clone/MLAK-Clone.vcxproj.filters
+++ b/MLAK-Clone/MLAK-Clone.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="Map.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Rend.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="borderdecoration.png">
