--- a/MLAK-Clone/MLAK-Clone.vcxproj
+++ b/MLAK-Clone/MLAK-Clone.vcxproj
@@ -159,6 +159,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Adventurer.cpp" />
+    <ClCompile Include="Building.cpp" />
     <ClCompile Include="Dungeon.cpp" />
     <ClCompile Include="Equipment.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -170,6 +171,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Adventurer.h" />
+    <ClInclude Include="Building.h" />
     <ClInclude Include="Dungeon.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Equipment.h" />
