Added Quest Class

--- a/MLAK-Clone/MLAK-Clone.vcxproj
+++ b/MLAK-Clone/MLAK-Clone.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Quest.cpp" />
     <ClCompile Include="Renderable.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +179,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Quest.h" />
     <ClInclude Include="Rend.h" />
     <ClInclude Include="Renderable.h" />
   </ItemGroup>
