--- a/MLAK-Clone/MLAK-Clone.vcxproj.filters
+++ b/MLAK-Clone/MLAK-Clone.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Building.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Quest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Building.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Quest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
