--- a/MLAK-Clone/MLAK-Clone.vcxproj.filters
+++ b/MLAK-Clone/MLAK-Clone.vcxproj.filters
@@ -85,5 +85,8 @@
     <Image Include="bubble.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="basictiles.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
