--- a/MLAK-Clone/MLAK-Clone.vcxproj.filters
+++ b/MLAK-Clone/MLAK-Clone.vcxproj.filters
@@ -88,5 +88,8 @@
     <Image Include="basictiles.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="background1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
